--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Titel</title>
+        <title>Baumarkt</title>
         <link rel="stylesheet" href="styles/main.css">
     </head>
     <body>
-        <h1>Überschrift 1</h1>
+        <h1>Lagerbestand</h1>
 
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium eaque voluptates perspiciatis dolorem at veritatis alias ea tempore impedit. Dolore impedit vel quidem placeat repudiandae maxime voluptates, expedita quod. Praesentium?</p>
+        <ul>
+            <li>3 Hämmer</li>
+            <li>100 Nägel</li>
+            <li>5 Bretter</li>
+        </ul>>
     </body>
 </html>
