--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
             <li>3 Hämmer</li>
             <li>100 Nägel</li>
             <li>5 Bretter</li>
-        </ul>>
+        </ul>
+
+        <p>Das ist eine Demoseite.</p>
     </body>
 </html>
