--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
         </ul>
 
         <p>Das ist eine Demoseite.</p>
+        <img src="images/baumarkt.png" width="300px">
     </body>
 </html>
